test_suite/alan-2022-examples/failing/003780_mutation.alan
source Z begin if 02 then relax to end end
